lab2/log/build_2026-02-03_11-10-06/lab2_turtlesim/stderr.log
  File "/home/cc/ee106a/sp26/class/ee106a-aac/ros_workspaces/lab2/install/lab2_turtlesim/lib/python3.10/site-packages/lab2_turtlesim/turtle_controller.py", line 28
    elif key = 'd':
         ^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?

